--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@tanstack/react-query-devtools": "^5.35.1",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
